Residency milestone — document Steps 2–4 merge in continuity docs
- JOURNAL.md: newest-first MILESTONE entry recording that production
  gliding now meets the residency goal (canonical pose resident on
  GPU, host syncs at output-frame cadence; demandSyncPose 1101→3
  calls on dense). Captures the Steps 2–4 arc, the validation
  snapshot vs main 7759be7, the post-merge smoke (bindEvents=844,
  gv=7.75), and the deferred follow-ons.
- CLAUDE.md: replaced the outdated "GPU acceleration is planned"
  section with a "GPU Acceleration (current architecture)" section
  describing the residency model, single-graph TaskGraph, the
  noMonomersSimd gate retiring the per-step pull, drag/force/joints
  on device, what stays on CPU, and pointers to the design doc and
  validation refs. Updated the -gpu flag description in the run
  table and added BOA_SINGLE_GRAPH / BOA_PHASE45_PARITY env vars.
- RESIDENT_POSE_DELTA_SCATTER.md: expanded the "Remaining per-step
  pull" follow-on section with three options ordered cheapest-to-
  fullest — (1) biochem-cadence pull gating (the planner-flagged
  cheap interim that exploits biochem firing far less often than
  rigid-body physics steps; pends the planned biochem-rates survey),
  (2) device-side biochem deltas via the existing scatterPose
  pipeline, (3) per-Thing on-demand pull. Added "Delta-buffer cap
  tuning" (crossover ~13K things) and "Cross-references" (1-step
  bind-lag, float32 binding systematic) deferred-items sections.
- RUN_LOGS/2026-06-07_step4_postmerge_smoke/: post-merge sanity
  smoke log (rc=0, wall=249s, demandSyncPose 0.329s/102 calls).

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>